@@ -13,12 +13,14 @@ inc/Module/Install/WriteAll.pm
 lib/Catalyst/Action/Deserialize.pm
 lib/Catalyst/Action/Deserialize/Data/Serializer.pm
 lib/Catalyst/Action/Deserialize/JSON.pm
+lib/Catalyst/Action/Deserialize/View.pm
 lib/Catalyst/Action/Deserialize/XML/Simple.pm
 lib/Catalyst/Action/Deserialize/YAML.pm
 lib/Catalyst/Action/REST.pm
 lib/Catalyst/Action/Serialize.pm
 lib/Catalyst/Action/Serialize/Data/Serializer.pm
 lib/Catalyst/Action/Serialize/JSON.pm
+lib/Catalyst/Action/Serialize/View.pm
 lib/Catalyst/Action/Serialize/XML/Simple.pm
 lib/Catalyst/Action/Serialize/YAML.pm
 lib/Catalyst/Action/Serialize/YAML/HTML.pm
@@ -36,10 +38,13 @@ t/catalyst-action-rest.t
 t/catalyst-action-serialize-accept.t
 t/catalyst-action-serialize-query.t
 t/catalyst-action-serialize.t
+t/catalyst-request-rest.t
 t/data-serializer.t
 t/json.t
 t/lib/Test/Rest.pm
 t/lib/Test/Serialize.pm
+t/lib/Test/Serialize/View/Simple.pm
+t/view.t
 t/xml-simple.t
 t/yaml-html.t
 t/yaml.t
